--- a/sandbox.html
+++ b/sandbox.html
@@ -9,10 +9,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <p id="loading">Loading</p>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/3.2.2/es6-promise.js"></script>
-    <script type="text/javascript" src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.20.1.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.11.1/fetch.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ringcentral/ringcentral-js/3.2.2/build/ringcentral.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/es6-promise@4.2.8/dist/es6-promise.auto.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@ringcentral/sdk@4.6.1/dist/ringcentral.js"></script>
     <script>
       var environment = 'sandbox';
     </script>
