--- a/index.html
+++ b/index.html
@@ -3,12 +3,80 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Simple media player</title>
+    <title>RingCentral Media Reader</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+      .title {
+        padding: 30px 0;
+      }
+      .card {
+        margin-bottom: 20px;
+      }
+
+      button {
+        margin-top: 10px;
+      }
+
+      #logoutButton {
+        margin: 0;
+        display: none;
+      }
+
+      .rc-card-header {
+        line-height: 31px;
+      }
+
+      #mainPage {
+        display: none;
+      }
+      #startPage {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <p id="loading">Loading</p>
+    <div id="loading">
+      <p>Loading</p>
+    </div>
+    <div class="container" id="mainPage">
+      <h1 class="title">RingCentral Media Reader</h1>
+      <div class="card">
+        <div class="card-header rc-card-header">
+          For all RingCentral users
+          <button type="button" id="logoutButton" class="btn btn-outline-danger btn-sm float-end">Logout RingCentral account</button>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Get from RingCentral server directly</h5>
+          <p class="card-text">
+            Notice: Data may be lost as RingCentral only retain data up to 90 days or 100,000 call recordings.
+            For more information, please read data retention policy section <a href="https://support.ringcentral.com/article/8913.html" target="_blank">here</a>.</p>
+          <button id="readFromRCServer" class="btn btn-primary">Get media from RingCentral server</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          For RingCentral users with Archiver enabled
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Get from third party storages</h5>
+          <p class="card-text">
+            Notice: There are hours delay for synchronizing data to third party storages. Check your Archiver settings <a target="_blank" href="https://service.ringcentral.com/application/extension/tools/archiver">here</a>.
+            For introduction about RingCentral Archiver, please refer <a href="https://www.ringcentral.com/apps/ringcentral-archiver" target="_blank">here</a>.</p>
+          <button id="readFromGoogle" class="btn btn-outline-primary">Get media from Google Drive</button>
+          <button id="readFromDropbox" class="btn btn-outline-primary">Get media from Dropbox</button>
+          <button id="readFromBox" class="btn btn-outline-primary">Get media from Box</button>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="startPage">
+      <h1 class="title">RingCentral Media Reader</h1>
+      <div class="mb-3">
+        <label for="mediaUri" class="form-label">Please input RingCentral media URI</label>
+        <input type="text" id="mediaUri" class="form-control" placeholder="https://media.ringcentral.com/...">
+      </div>
+      <button type="button" class="btn btn-primary" id="startGetMedia" >Get media</button>
+    </div>
     <script type="text/javascript" src="https://unpkg.com/es6-promise@4.2.8/dist/es6-promise.auto.js"></script>
     <script type="text/javascript" src="https://unpkg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@ringcentral/sdk@4.6.1/dist/ringcentral.js"></script>
