--- a/sandbox.html
+++ b/sandbox.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RingCentral Media Reader | Sandbox</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <style>
       .title {
         padding: 30px 0;
@@ -71,6 +72,8 @@
       <div class="card">
         <div class="card-header">
           For RingCentral users with Archiver enabled
+          &nbsp;
+          <i class="bi-gear" style="font-size: 1rem;cursor: pointer;" id="archiverSettings"></i>
         </div>
         <div class="card-body">
           <h5 class="card-title">Get from third party storages</h5>
@@ -80,6 +83,7 @@
           <button id="readFromGoogle" class="btn btn-outline-primary">Get from Google Drive</button>
           <button id="readFromDropbox" class="btn btn-outline-primary">Get from Dropbox</button>
           <button id="readFromBox" class="btn btn-outline-primary">Get from Box</button>
+          <button id="readFromOneDrive" class="btn btn-outline-primary">Get from OneDrive</button>
         </div>
       </div>
     </div>
@@ -91,9 +95,34 @@
       </div>
       <button type="button" class="btn btn-primary" id="startGetMedia" >Get media</button>
     </div>
+    <div class="modal" tabindex="-1" id="archiveSettingModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Settings</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="googleDriveHomeURI" class="form-label">Google Drive Home Page URI</label>
+              <input type="text" class="form-control" id="googleDriveHomeURI" required placeholder="Google Drive URI required for redirecting to Google Drive">
+            </div>
+            <div class="mb-3">
+              <label for="oneDriveHomeURI" class="form-label">OneDrive Home Page URI</label>
+              <input type="text" class="form-control" id="oneDriveHomeURI" placeholder="OneDrive URI required for redirecting to OneDrive">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="saveArchiverSettings">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="https://unpkg.com/es6-promise@4.2.8/dist/es6-promise.auto.js"></script>
     <script type="text/javascript" src="https://unpkg.com/whatwg-fetch@3.6.2/dist/fetch.umd.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@ringcentral/sdk@4.6.1/dist/ringcentral.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
       var environment = 'sandbox';
     </script>
